# carta-astral

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  spike_kerykeion.py
backend/api/: accounts.py  auth.py  chart_service.py  deletion.py  exceptions.py  geocode.py  identity.py  interpretation_service.py  ledger.py  legal.py  models.py  permissions.py  serializers.py  sso.py  text_norm.py  urls.py  versioning.py  views.py  webhooks.py
backend/api/data/: exonyms.json
backend/api/management/commands/: delete_account.py  grant_credits.py  import_geonames.py  mint_dev_session.py  purge_sessions.py
backend/api/migrations/: 0001_initial.py  0002_geoname_geonametoken.py  0003_interpretation.py  0004_installation.py  0005_chart_uuid.py  0006_interpretation_installation.py  0007_account.py  0008_provideridentity.py  0009_session.py  0010_subtombstone.py  0011_chart_account_interpretation_account_and_more.py  0012_device.py  0013_remove_interpretation_installation_and_more.py  0014_account_flagged_account_refund_count_and_more.py  0015_interpretation_content_key.py  0016_backfill_content_key.py  0017_birthdata_place_label.py
backend/config/: middleware.py  settings.py  urls.py
backend/core/: ephemeris.py  exceptions.py  models.py  timeconv.py
backend/interpret/: exceptions.py  generator.py  prompts.py
backend/tests/: conftest.py
backend/tests/api/: test_access_control.py  test_account_auth.py  test_account_delete.py  test_account_me.py  test_account_model.py  test_account_resolution.py  test_auth.py  test_auth_endpoints.py  test_chart_throttle.py  test_chart_uuid.py  test_charts_scoping.py  test_create_chart.py  test_credit_transaction.py  test_credits_quota.py  test_delete_account_command.py  test_delete_charts.py  test_device_model.py  test_errors.py  test_geocode_endpoint.py  test_geocode_search.py  test_geocode_tz.py  test_geoname_models.py  test_grant_credits.py  test_import_geonames.py  test_installation_endpoint.py  test_installation_me.py  test_installation_model.py  test_interpretation_endpoint.py  test_interpretation_model.py  test_interpretation_service.py  test_ledger.py  test_ledger_iap.py  test_legal_pages.py  test_models.py  test_provider_identity.py  test_purge_sessions.py  test_retrieve_chart.py  test_revenuecat_webhook.py  test_serializers.py  test_session_model.py  (+5 more)
backend/tests/core/: _capture_golden.py  test_architecture.py  test_ephemeris.py  test_golden.py  test_models.py  test_timeconv.py
backend/tests/core/golden/: degraded_polar_1989.json  dst_useastern_2021.json  (+3 more)
backend/tests/interpret/: test_generator.py
