[project]
name = "carta-astral-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kerykeion>=5.12",
    "timezonefinder>=8.2.4",
]

[dependency-groups]
dev = [
    "import-linter>=2.12",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:kerykeion",
]

[tool.ruff]
line-length = 100
# spike_kerykeion.py es un script de exploración (evidencia del spike), no código de producción
extend-exclude = ["spike_kerykeion.py"]

[tool.mypy]
strict = true
files = ["core"]

[tool.importlinter]
root_package = "core"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core no depende de django/requests/anthropic/interpret"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["django", "requests", "anthropic", "interpret"]

[[tool.importlinter.contracts]]
name = "core.models no importa kerykeion"
type = "forbidden"
source_modules = ["core.models"]
forbidden_modules = ["kerykeion"]
